--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_search">FindHomeRental</string>
+    <string name="action_signIn">Đăng nhập</string>
+    <string name="action_search">Tìm kiếm...</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
